# spotdj

./: Makefile  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py
scripts/: download.py  update_metadata.py
spotdj/: __init__.py  __main__.py  converter.py  database.py  downloader.py  main.py  metadata_provider.py  metadata_setter.py  name_selector.py  playlists.py  searcher.py  spotdj.py  vlc.py  vlc_player.py  vlc_selector.py
spotdj/selectors/: bestmatch.py  selectors.py  vlc.py
tests/: test_spotdj.py
